# tinyjaxley

./: LICENSE  README.md  count_lines.sh  dev.ipynb  pyproject.toml
tinyjaxley/: solvers.py  tree.py  utils.py
tinyjaxley/channels/: channel.py  hh.py
tinyjaxley/mechansims/channels/: channel.py  hh.py
tinyjaxley/modules/: base.py  branch.py  cell.py  comp.py  net.py  utils.py
